Fixed Overflow bug

--- a/resources/styles/left.css
+++ b/resources/styles/left.css
@@ -1,9 +1,8 @@
 
 .left-column {
     float: left;
-    width: calc(35% - var(--spacing) / 2);
-    max-width: calc(35% - var(--spacing) / 2);
-    margin-inline-end: var(--spacing);
+    width: 31.5%;
+    max-width: 31.5%;
     background-color: #00000010;
     padding: var(--spacing);
     gap: calc(var(--spacing) * 1.5);
