--- a/resources/styles/main.css
+++ b/resources/styles/main.css
@@ -124,7 +124,6 @@ ul {
     padding: 0;
     margin: 0 auto;
     position: relative;
-    gap: var(--spacing);
     
     min-width: 210.000mm;
     width: 210.000mm;
